# summarize-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  claude_desktop_config.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test.js  test.py  tsconfig.json
src/: index.ts
src/summarize_mcp/: __init__.py  __main__.py  server.py
