[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summarize-mcp"
version = "0.1.1"
description = "A Model Context Protocol server for text-to-speech summaries using OpenAI's TTS API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Levi Nunnink", email = "levi@nunnink.com"}
]
keywords = ["mcp", "llm", "tts", "openai", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.3.2",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/levi-nunnink/summarize-mcp"
Repository = "https://github.com/levi-nunnink/summarize-mcp"
Issues = "https://github.com/levi-nunnink/summarize-mcp/issues"

[project.scripts]
summarize-mcp = "summarize_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/summarize_mcp"]